--- a/package.json
+++ b/package.json
@@ -34,15 +34,12 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "yarn rebuild:scripts && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build:scripts": "tsc -p tsconfig.scripts.json && tsc-alias -p tsconfig.scripts.json",
-    "rebuild:scripts": "rm -rf js && yarn build:scripts",
-    "type:check": "tsc -p tsconfig.json && tsc -p tsconfig.scripts.json --noEmit",
+    "type:check": "tsc",
     "style:check": "prettier --check .",
-    "style:format": "prettier --write .",
-    "gen:sitemap": "yarn rebuild:scripts && node js/scripts/generate-sitemap.js"
+    "style:format": "prettier --write ."
   },
   "engines": {
     "node": "12.x"
@@ -65,6 +62,7 @@
     "next-themes": "^0.0.10",
     "postcss": "^8.2.4",
     "preact": "^10.5.10",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
@@ -85,7 +83,6 @@
     "vfile": "^4.2.1"
   },
   "devDependencies": {
-    "@tsconfig/node12": "^1.0.7",
     "@types/classnames": "^2.2.11",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.21",
@@ -94,8 +91,6 @@
     "@types/react-dom": "^17.0.0",
     "@types/revalidator": "^0.3.7",
     "@types/unist": "^2.0.3",
-    "prettier": "^2.2.1",
-    "tsc-alias": "^1.2.2",
     "typescript": "^4.1.3"
   }
 }
