--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "type:check": "tsc",
     "style:check": "prettier --check .",
@@ -55,10 +56,10 @@
     "mdast-util-to-string": "^2.0.0",
     "next": "^10.0.5",
     "next-seo": "^4.17.0",
+    "next-sitemap": "^1.4.5",
     "next-themes": "^0.0.10",
     "postcss": "^8.2.4",
     "preact": "^10.5.11",
-    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
@@ -84,11 +85,11 @@
     "@types/glob": "^7.1.3",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
-    "@types/prettier": "^2.1.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/revalidator": "^0.3.7",
     "@types/unist": "^2.0.3",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
