--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "remark-parse-frontmatter": "^1.0.2",
     "remark-unwrap-texts": "^1.0.3",
     "revalidator": "^0.3.1",
+    "simple-icons": "^4.8.0",
     "tailwindcss": "^2.0.2",
     "tailwindcss-autofill": "^0.1.0",
     "tailwindcss-shadow-fill": "^0.1.0",
